# cmake-skeleton

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindCatch.cmake
inc/: aldente.hpp
src/: aldente.cpp  aldente.hpp
test/: aldente.cpp
